--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
   "dependencies": {
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.8",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "axios": "^1.1.3",
     "babel-loader": "^9.0.0",
     "css-loader": "^6.7.1",
     "html-loader": "^4.2.0",
@@ -24,6 +30,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass-loader": "^13.1.0",
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.8.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
