--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
     "@types/node": "^18.11.8",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/throttle-debounce": "^5.0.0",
     "axios": "^1.1.3",
     "babel-loader": "^9.0.0",
     "css-loader": "^6.7.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.6.1",
     "node-sass": "^7.0.3",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass-loader": "^13.1.0",
+    "throttle-debounce": "^5.0.0",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
